Fix time picker confirm / cancel button align

--- a/scss/datepicker.scss
+++ b/scss/datepicker.scss
@@ -254,10 +254,15 @@ a {
 .c-datepicker-time-panel__footer {
   border-top: 1px solid #e4e4e4;
   padding: 4px 0;
-  height: 36px;
   line-height: 25px;
-  text-align: right;
   box-sizing: border-box;
+}
+
+.c-datepicker-time-panel__footer_preset {
+}
+
+.c-datepicker-time-panel__footer_action {
+  text-align: right;
 }
 
 .c-datepicker-time-panel__btn {
@@ -280,12 +285,6 @@ a {
 .c-datepicker-time-panel__btn.cancel {
   font-weight: 800;
   color: #999;
-}
-
-.c-datepicker-time-panel__btn.min,
-.c-datepicker-time-panel__btn.max {
-  float: left;
-  padding-right: 0;
 }
 
 .c-datepicker-date-picker__header {
